refactor: ports logic refactor to make it configurable
